--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -34,9 +34,13 @@
 
 \setlength{\parskip}{0.5em}
 
-Philip Jonathan is a statistical modeller, Chief Statistician at Shell and Chair of Environmental Statistics and Data Science in the Department of Mathematics and Statistics at Lancaster University, UK. His current research is reported at www.lancs.ac.uk/$\sim$jonathan. He has more than 30 years experience in statistical modelling of physical systems, particularly the ocean environment, and a background in applied mathematics and physics. He has developed methods for large-scale non-stationary marginal extreme value modelling with multidimensional covariates, and non-stationary extensions of multivariate and spatial extreme value methods, and applied these widely. His long-standing interests include Bayesian uncertainty analysis for complex systems, Bayesian inference for optimal design and probabilistic inversion in remote sensing, multivariate prediction and computational statistics generally. He has published on ion physics, chemical kinetics, multivariate analysis, chemometrics and quantitative structure--activity relationships, single pixel cameras, wave radar measurement, time-series and change-point analysis, and ancient writing systems. Illustrative references include:
+Philip Jonathan is a statistical modeller, Chief Statistician at Shell and Chair of Environmental Statistics and Data Science in the Department of Mathematics and Statistics at Lancaster University, UK (both on a part-time basis from April 2023). His current research is reported at www.lancs.ac.uk/$\sim$jonathan. He has more than 30 years experience in statistical modelling of physical systems, particularly the ocean environment, and a background in applied mathematics and physics. He is particularly interested in characterising extreme ocean environments, and the development of methodology for good design and re-analysis of offshore and coastal infrastructure. He has published on the development of methods for large-scale non-stationary marginal extreme value modelling with multidimensional covariates, and non-stationary extensions of multivariate, spatial and time-series extreme value methods, and applied these widely. He has developed and refined estimators summarising the tails of distributions, including return values, associated values and environmental design contours in the presence of uncertainty. His long-standing interests include Bayesian uncertainty analysis for complex systems, Bayesian inference for optimal design and probabilistic inversion in remote sensing, multivariate prediction and computational statistics generally. He has also published on ion physics, chemical kinetics, multivariate analysis, chemometrics and quantitative structure--activity relationships, single pixel cameras, wave radar measurement, time-series and change-point analysis, and ancient writing systems.
+
+Illustrative references include:
 
 \setlength{\parskip}{0.5em}
+
+R. Shooter, E. Ross, A. Ribal, I.R. Young and \textbf{P. Jonathan}. Multivariate spatial conditional extremes for extreme ocean environments. Ocean Eng. 247:110647, 2022.
 
 B. Hirst, D. Randell, M. Jones, \textbf{P. Jonathan}, B. King and M. Dean. A new technique for monitoring the atmosphere above onshore carbon storage projects that can estimate the locations and mass emission rates of detected sources.  Energy Procedia 114:3716--3728, 2017.
 
@@ -112,11 +116,11 @@ E. Y. Kamber, \textbf{P. Jonathan}, A. G. Brenton, and J. H. Beynon. Single-elec
 
 \section{Other academic activities}
 
-\cvitem{External examination of PhDs}{Department of Civil Engineering and Environmental Science (Imperial College, 2017); School of Chemical Engineering and Advanced Materials, Newcastle, 2016); Department of Mathematical Sciences (Norwegian University of Science and Technology, Trondheim, 2015); Institute for Transport Studies (Leeds, 2011); Centre for Process Analytics and Control Technology (Newcastle, 2003).}
+\cvitem{Recent talks and seminars}{Oceanographic extremes (Metoffice, Exeter, 2022; Wales Mathematics Colloquium, Gregynnog, 2022; Royal Statistical Society Conference, 2021; ISSC-ITTC, 2021; Waves SIG, 2020; OMAE Conference, 2020; Lancaster extremes workshop, 2019; Marine Centre Wales, Bangor, 2018; Extreme Value Analysis \& Natural Hazards, Southampton, 2017); Remote sensing (Wales Mathematics Colloquium, Gregynnog, 2022; Data-centric engineering, 2021); Emerging themes in data science (Emerging Applications Section, RSS, London, 2017); Spatial extremes (Extreme Value Analysis \& Natural Hazards, Southampton, 2017); Real-time data and applications (StatScale workshop, Lancaster, 2017).} 
 
-\cvitem{Recent talks and seminars}{Oceanographic extremes (Marine Centre Wales, Bangor, 2018); Emerging themes in data science (Emerging Applications Section, RSS, London, 2017); Spatial extremes (Extreme Value Analysis \& Natural Hazards, Southampton, 2017); Real-time data and applications (StatScale workshop, Lancaster, 2017).} 
+\cvitem{Academic leadership}{Member of: REF 2021 Mathematics Sub-panel (2018-21); Advisory Board for Mathematical Sciences (Durham, 2016-2017); StatScale External Advisory Board (Mathematics and Statistics, Lancaster, 2016-2018); STOR-i External Advisory Board (Mathematics and Statistics, Lancaster, 2009-2018).}
 
-\cvitem{Current academic leadership}{Member of: REF 2021 Mathematics Sub-panel (2018-); Advisory Board for Mathematical Sciences (Durham, 2016-); StatScale External Advisory Board (Mathematics and Statistics, Lancaster, 2016-); STOR-i External Advisory Board (Mathematics and Statistics, Lancaster, 2009-).}
+\cvitem{External examination of PhDs}{Mathematical Sciences, (Durham, 2020); Department of Civil Engineering and Environmental Science (Imperial College, 2017); School of Chemical Engineering and Advanced Materials, Newcastle, 2016); Department of Mathematical Sciences (Norwegian University of Science and Technology, Trondheim, 2015); Institute for Transport Studies (Leeds, 2011); Centre for Process Analytics and Control Technology (Newcastle, 2003). Also acted as Internal Examiner for Lancaster PhDs since 2018 on numerous occasions.}
 
 %\section{Publications}
 %
@@ -130,23 +134,25 @@ E. Y. Kamber, \textbf{P. Jonathan}, A. G. Brenton, and J. H. Beynon. Single-elec
 %\bibliography{PhilipJonathan}                        % 'publications' is the name of a BibTeX file
 
 \section{Publications}
-Publications are sorted first by year (in reverse), then by author and finally if necessary by title. Citation H-index (Google Scholar, accessed January 2021) is 32 (and 22 since 2016). Total number of citations is 3056 (1440 since 2016). 
+Publications are sorted first by year (in reverse), then by author and finally if necessary by title. Citation H-index (Google Scholar, accessed December 2022) is 33 (and 24 since 2017). Total number of citations is 3739 (1910 since 2017). 
 \setlength{\parskip}{0.2em}
 \vspace{5pt}
 
-2022:  A.M. Barlow, E. Mackay, E. Eastoe and \textbf{P. Jonathan}. A penalised piecewise-linear model for non-stationary extreme value analysis of peaks over threshold. (Submitted to Ocean Eng., draft at  www.lancs.ac.uk/$\sim$jonathan.) arXiv:2201.03915.
+2022:  A.M. Barlow, E. Mackay, E. Eastoe and \textbf{P. Jonathan}. A penalised piecewise-linear model for non-stationary extreme value analysis of peaks over threshold. (Accepted by Ocean Eng., draft at  www.lancs.ac.uk/$\sim$jonathan.) arXiv:2201.03915.
 
 2022: J. P. Grainger, A. Sykulski, K. Ewans, H. F. Hansen and \textbf{P. Jonathan}. A multivariate pseudo-likelihood approach to estimating ocean wave direction models. (Submitted to J. R. Stat. Soc. C in December 2021, preprint at www.lancs.ac.uk/$\sim$jonathan.) arXiv:2202.03773.
 
 2022: A. Raby, G. Bullock, \textbf{P. Jonathan}, D. Randell and C. Whittaker. On wave impact pressure variability. Coastal Eng. 177:104168. doi:10.1016/j.coastaleng.2022.104168.
 
-2022: C. Roberts, O. Shorttle, K. Mandel, M. Jones, R. Ijzermans, B. Hirst and \textbf{P. Jonathan}. Enhanced monitoring of atmospheric methane from space with hierarchical Bayesian inference. (Accepted by Environ. Res. Lett., preprint at www.lancs.ac.uk/$\sim$jonathan.) arXiv:2111.12486.
+2022: C. Roberts, O. Shorttle, K. Mandel, M. Jones, R. Ijzermans, B. Hirst and \textbf{P. Jonathan}. Enhanced monitoring of atmospheric methane from space with hierarchical Bayesian inference. Environ. Res. Lett. 17:064037 arXiv:2111.12486.
 
 2022: K. Sando, R. Wada, J. Rohmer, S. Lecacheux and \textbf{P. Jonathan}. Estimating joint extremes of significant wave height and wind speed for tropical cyclones. OMAE2022-79888 Proc. 41st Int. Conf. on Ocean, Offshore \& Arctic Engineering. (Preprint at www.lancs.ac.uk/$\sim$jonathan.)
 
 2022: R. Shooter, E. Ross, A. Ribal, I.R. Young and \textbf{P. Jonathan}. Multivariate spatial conditional extremes for extreme ocean environments. Ocean Eng. 247:110647. arXiv:2201.10451.
 
-2022: T. Tendijck, J. A. Tawn and \textbf{P. Jonathan}. Extremal characteristics of conditional models. (Submitted to Extremes in February 2022, preprint at www.lancs.ac.uk/$\sim$jonathan.) arXiv:2202.11673.
+2022: T. Tendijck, J. A. Tawn and \textbf{P. Jonathan}. Extremal characteristics of conditional models. Extremes doi.org/10.1007/s10687-022-00453-7 arXiv:2202.11673.
+
+2022: R. Towe, D. Randell, J. Kensler, G. Feld and and \textbf{P. Jonathan}. Estimation of associated values from conditional extreme value models. (Submitted to Ocean Eng., draft at  www.lancs.ac.uk/$\sim$jonathan.)
 
 2022: R. Wada, J. Rohmer, Y. Krien and \textbf{P. Jonathan}. Statistical estimation of spatial wave extremes for tropical cyclones from small data samples: validation of the STM-E approach using long-term synthetic cyclone data for the Caribbean Sea. Nat. Hazards Earth Sys., 22, 431-444. doi:10.5194/nhess-22-431-2022.
 
@@ -403,9 +409,15 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 \setlength{\parskip}{0.5em}
 
-M. J. Jones, \textbf{P. Jonathan} and M. Goldstein. Bayes linear analysis using high-order moments.
+D. Dodd, E. Cripps, D. Leslie and \textbf{P. Jonathan} Bayesian adaptive sampling for pipeline spans.
 
-E. Zanini, E. Eastoe, M. J. Jones, D. Randell and \textbf{P. Jonathan}. Flexible covariate representations for multidimensional extremes. 
+K. Ewans and \textbf{P. Jonathan} Uncertainties in estimating the effect of climate change on 100-year return period significant wave height.
+
+J. P. Grainger, A. Sykulski a \textbf{P. Jonathan} Amcangyfrif sbectrwm amleddol tonnau disgyrchiol arwyneb y m\^or o amgylch arfordir Cymru.
+
+E. Ross, R. Towe, D. Randell and \textbf{P. Jonathan} PPC: MATLAB software for non-stationary penalised piecewise constant marginal and conditional extreme value modelling.
+
+S. Tendijck, J. A. Tawn, D. Randell and \textbf{P. Jonathan} Temporal evolution of extreme excursions of multivariate stationary kth order Markov processes with application to oceanographic data
 
 \setlength{\parskip}{0em}
 
