--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -138,6 +138,8 @@ Publications are sorted first by year (in reverse), then by author and finally i
 \setlength{\parskip}{0.2em}
 \vspace{5pt}
 
+2023: K. Ewans and \textbf{P. Jonathan} Uncertainties in estimating the effect of climate change on 100-year return value for significant wave height. (Submitted to Ocean Eng., draft at  www.lancs.ac.uk/$\sim$jonathan.) arXiv:2212.11049.
+
 2022:  A.M. Barlow, E. Mackay, E. Eastoe and \textbf{P. Jonathan}. A penalised piecewise-linear model for non-stationary extreme value analysis of peaks over threshold. (Accepted by Ocean Eng., draft at  www.lancs.ac.uk/$\sim$jonathan.) arXiv:2201.03915.
 
 2022: J. P. Grainger, A. Sykulski, K. Ewans, H. F. Hansen and \textbf{P. Jonathan}. A multivariate pseudo-likelihood approach to estimating ocean wave direction models. (Submitted to J. R. Stat. Soc. C in December 2021, preprint at www.lancs.ac.uk/$\sim$jonathan.) arXiv:2202.03773.
@@ -411,7 +413,7 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 D. Dodd, E. Cripps, D. Leslie and \textbf{P. Jonathan} Bayesian adaptive sampling for pipeline spans.
 
-K. Ewans and \textbf{P. Jonathan} Uncertainties in estimating the effect of climate change on 100-year return period significant wave height.
+K. Ewans and \textbf{P. Jonathan} Is the 100-year return value for significant wave height increasing in the Tasman Sea?
 
 J. P. Grainger, A. Sykulski a \textbf{P. Jonathan} Amcangyfrif sbectrwm amleddol tonnau disgyrchiol arwyneb y m\^or o amgylch arfordir Cymru.
 
