Climate extremes + updated CV

--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -138,11 +138,17 @@ Publications are sorted first by year (in reverse), then by author and finally i
 \setlength{\parskip}{0.2em}
 \vspace{5pt}
 
-2023: K. Ewans and \textbf{P. Jonathan} Uncertainties in estimating the effect of climate change on 100-year return value for significant wave height. (Submitted to Ocean Eng., draft at  www.lancs.ac.uk/$\sim$jonathan.) arXiv:2212.11049.
+2023:  A.M. Barlow, E. Mackay, E. Eastoe and \textbf{P. Jonathan}. A penalised piecewise-linear model for non-stationary extreme value analysis of peaks over threshold. Ocean Eng. 267:113265 arXiv:2201.03915.
 
-2022:  A.M. Barlow, E. Mackay, E. Eastoe and \textbf{P. Jonathan}. A penalised piecewise-linear model for non-stationary extreme value analysis of peaks over threshold. (Accepted by Ocean Eng., draft at  www.lancs.ac.uk/$\sim$jonathan.) arXiv:2201.03915.
+2023: K. Ewans and \textbf{P. Jonathan} Is the 100-year return value for significant wave height increasing in the Tasman Sea? (Submitted to 42th Int. Conf. on Ocean, Offshore \& Arctic Engineering, Mebourne; preprint at  www.lancs.ac.uk/$\sim$jonathan.)
 
-2022: J. P. Grainger, A. Sykulski, K. Ewans, H. F. Hansen and \textbf{P. Jonathan}. A multivariate pseudo-likelihood approach to estimating ocean wave direction models. (Submitted to J. R. Stat. Soc. C in December 2021, preprint at www.lancs.ac.uk/$\sim$jonathan.) arXiv:2202.03773.
+2023: K. Ewans and \textbf{P. Jonathan} Uncertainties in estimating the effect of climate change on 100-year return value for significant wave height. (Accepted by Ocean Eng., preprint at  www.lancs.ac.uk/$\sim$jonathan.) arXiv:2212.11049.
+
+2023: R. Towe, D. Randell, J. Kensler, G. Feld and and \textbf{P. Jonathan}. Estimation of associated values from conditional extreme value models. Ocean Eng. 272:113808
+
+2023: T. Tendijck, J. A. Tawn and \textbf{P. Jonathan}. Extremal characteristics of conditional models. Extremes 26:139–156 arXiv:2202.11673.
+
+2022: J. P. Grainger, A. Sykulski, K. Ewans, H. F. Hansen and \textbf{P. Jonathan}. A multivariate pseudo-likelihood approach to estimating ocean wave direction models. (Accepted by J. R. Stat. Soc. C in December 2021, preprint at www.lancs.ac.uk/$\sim$jonathan.) arXiv:2202.03773.
 
 2022: A. Raby, G. Bullock, \textbf{P. Jonathan}, D. Randell and C. Whittaker. On wave impact pressure variability. Coastal Eng. 177:104168. doi:10.1016/j.coastaleng.2022.104168.
 
@@ -151,10 +157,6 @@ Publications are sorted first by year (in reverse), then by author and finally i
 2022: K. Sando, R. Wada, J. Rohmer, S. Lecacheux and \textbf{P. Jonathan}. Estimating joint extremes of significant wave height and wind speed for tropical cyclones. OMAE2022-79888 Proc. 41st Int. Conf. on Ocean, Offshore \& Arctic Engineering. (Preprint at www.lancs.ac.uk/$\sim$jonathan.)
 
 2022: R. Shooter, E. Ross, A. Ribal, I.R. Young and \textbf{P. Jonathan}. Multivariate spatial conditional extremes for extreme ocean environments. Ocean Eng. 247:110647. arXiv:2201.10451.
-
-2022: T. Tendijck, J. A. Tawn and \textbf{P. Jonathan}. Extremal characteristics of conditional models. Extremes doi.org/10.1007/s10687-022-00453-7 arXiv:2202.11673.
-
-2022: R. Towe, D. Randell, J. Kensler, G. Feld and and \textbf{P. Jonathan}. Estimation of associated values from conditional extreme value models. (Submitted to Ocean Eng., draft at  www.lancs.ac.uk/$\sim$jonathan.)
 
 2022: R. Wada, J. Rohmer, Y. Krien and \textbf{P. Jonathan}. Statistical estimation of spatial wave extremes for tropical cyclones from small data samples: validation of the STM-E approach using long-term synthetic cyclone data for the Caribbean Sea. Nat. Hazards Earth Sys., 22, 431-444. doi:10.5194/nhess-22-431-2022.
 
