Updated CV and ClmChn

--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -138,21 +138,21 @@ Publications are sorted first by year (in reverse), then by author and finally i
 \setlength{\parskip}{0.2em}
 \vspace{5pt}
 
-2023:  A.M. Barlow, E. Mackay, E. Eastoe and \textbf{P. Jonathan}. A penalised piecewise-linear model for non-stationary extreme value analysis of peaks over threshold. Ocean Eng. 267:113265 arXiv:2201.03915.
+2023:  A.M. Barlow, E. Mackay, E. Eastoe and \textbf{P. Jonathan}. A penalised piecewise-linear model for non-stationary extreme value analysis of peaks over threshold. Ocean Eng. 267:113265. arXiv:2201.03915.
 
 2023: K. Ewans and \textbf{P. Jonathan} Is the 100-year return value for significant wave height increasing in the Tasman Sea? (Submitted to 42th Int. Conf. on Ocean, Offshore \& Arctic Engineering, Mebourne; preprint at  www.lancs.ac.uk/$\sim$jonathan.)
 
-2023: K. Ewans and \textbf{P. Jonathan} Uncertainties in estimating the effect of climate change on 100-year return value for significant wave height. (Accepted by Ocean Eng., preprint at  www.lancs.ac.uk/$\sim$jonathan.) arXiv:2212.11049.
+2023: K. Ewans and \textbf{P. Jonathan} Uncertainties in estimating the effect of climate change on 100-year return value for significant wave height. Ocean Eng. 272:113840. arXiv:2212.11049.
 
-2023: R. Towe, D. Randell, J. Kensler, G. Feld and and \textbf{P. Jonathan}. Estimation of associated values from conditional extreme value models. Ocean Eng. 272:113808
+2023: R. Towe, D. Randell, J. Kensler, G. Feld and and \textbf{P. Jonathan}. Estimation of associated values from conditional extreme value models. Ocean Eng. 272:113808.
 
-2023: T. Tendijck, J. A. Tawn and \textbf{P. Jonathan}. Extremal characteristics of conditional models. Extremes 26:139–156 arXiv:2202.11673.
+2023: T. Tendijck, J. A. Tawn and \textbf{P. Jonathan}. Extremal characteristics of conditional models. Extremes 26:139–156. arXiv:2202.11673.
 
 2022: J. P. Grainger, A. Sykulski, K. Ewans, H. F. Hansen and \textbf{P. Jonathan}. A multivariate pseudo-likelihood approach to estimating ocean wave direction models. (Accepted by J. R. Stat. Soc. C in December 2021, preprint at www.lancs.ac.uk/$\sim$jonathan.) arXiv:2202.03773.
 
 2022: A. Raby, G. Bullock, \textbf{P. Jonathan}, D. Randell and C. Whittaker. On wave impact pressure variability. Coastal Eng. 177:104168. doi:10.1016/j.coastaleng.2022.104168.
 
-2022: C. Roberts, O. Shorttle, K. Mandel, M. Jones, R. Ijzermans, B. Hirst and \textbf{P. Jonathan}. Enhanced monitoring of atmospheric methane from space with hierarchical Bayesian inference. Environ. Res. Lett. 17:064037 arXiv:2111.12486.
+2022: C. Roberts, O. Shorttle, K. Mandel, M. Jones, R. Ijzermans, B. Hirst and \textbf{P. Jonathan}. Enhanced monitoring of atmospheric methane from space with hierarchical Bayesian inference. Environ. Res. Lett. 17:064037. arXiv:2111.12486.
 
 2022: K. Sando, R. Wada, J. Rohmer, S. Lecacheux and \textbf{P. Jonathan}. Estimating joint extremes of significant wave height and wind speed for tropical cyclones. OMAE2022-79888 Proc. 41st Int. Conf. on Ocean, Offshore \& Arctic Engineering. (Preprint at www.lancs.ac.uk/$\sim$jonathan.)
 
