--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -96,8 +96,8 @@ E. Y. Kamber, \textbf{P. Jonathan}, A. G. Brenton, and J. H. Beynon. Single-elec
 \cventry{2022--date}{T. Newman}{Ph.D., Department of Mathematics \& Statistics, Lancaster University, UK}{}{}{}
 \cventry{2022--date}{M. Speers}{Ph.D., Department of Mathematics \& Statistics, Lancaster University, UK}{}{}{}
 \cventry{2021--date}{D. Dodd}{Ph.D., Department of Mathematics \& Statistics, Lancaster University, UK}{}{}{}
-\cventry{2019--date}{J. Grainger}{Ph.D., Department of Mathematics \& Statistics, Lancaster University, UK}{}{}{}
-\cventry{2019--date}{S. Tendijck}{Ph.D., Department of Mathematics \& Statistics, Lancaster University, UK}{}{}{}
+\cventry{2019--2022}{J. Grainger}{Ph.D., Department of Mathematics \& Statistics, Lancaster University, UK}{}{}{}
+\cventry{2019--2022}{S. Tendijck}{Ph.D., Department of Mathematics \& Statistics, Lancaster University, UK}{}{}{}
 \cventry{2016--2020}{R. Shooter}{Ph.D., Department of Mathematics \& Statistics, Lancaster University, UK}{}{}{}
 \cventry{2014--2018}{E. Zanini}{Ph.D., Department of Mathematics \& Statistics, Lancaster University, UK}{}{}{}
 \cventry{2013--2017}{M. Kereszturi}{Ph.D., Department of Mathematics \& Statistics, Lancaster University, UK}{}{}{}
@@ -144,11 +144,13 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 2023: K. Ewans and \textbf{P. Jonathan} Uncertainties in estimating the effect of climate change on 100-year return value for significant wave height. Ocean Eng. 272:113840. arXiv:2212.11049.
 
+2023: J. P. Grainger, A. Sykulski, K. Ewans, H. F. Hansen and \textbf{P. Jonathan}. A multivariate pseudo-likelihood approach to estimating ocean wave direction models. (Accepted by J. R. Stat. Soc. C in December 2021, preprint at www.lancs.ac.uk/$\sim$jonathan.) arXiv:2202.03773.
+
+2023: S. Tendijck, \textbf{P. Jonathan}, D. Randell and J. A. Tawn. Extremal characteristics of conditional models. (Submitted to Environmetrics in February 2021, preprint at www.lancs.ac.uk/$\sim$jonathan.) arXiv:2302.14501.
+
+2023: S. Tendijck, J. A. Tawn and \textbf{P. Jonathan}. Extremal characteristics of conditional models. Extremes 26:139–156. arXiv:2202.11673.
+
 2023: R. Towe, D. Randell, J. Kensler, G. Feld and and \textbf{P. Jonathan}. Estimation of associated values from conditional extreme value models. Ocean Eng. 272:113808.
-
-2023: T. Tendijck, J. A. Tawn and \textbf{P. Jonathan}. Extremal characteristics of conditional models. Extremes 26:139–156. arXiv:2202.11673.
-
-2022: J. P. Grainger, A. Sykulski, K. Ewans, H. F. Hansen and \textbf{P. Jonathan}. A multivariate pseudo-likelihood approach to estimating ocean wave direction models. (Accepted by J. R. Stat. Soc. C in December 2021, preprint at www.lancs.ac.uk/$\sim$jonathan.) arXiv:2202.03773.
 
 2022: A. Raby, G. Bullock, \textbf{P. Jonathan}, D. Randell and C. Whittaker. On wave impact pressure variability. Coastal Eng. 177:104168. doi:10.1016/j.coastaleng.2022.104168.
 
