Papurau Clay a Jake, newid CV ychydig

--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -144,9 +144,11 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 2023: K. Ewans and \textbf{P. Jonathan} Uncertainties in estimating the effect of climate change on 100-year return value for significant wave height. Ocean Eng. 272:113840. arXiv:2212.11049.
 
-2023: J. P. Grainger, A. Sykulski, K. Ewans, H. F. Hansen and \textbf{P. Jonathan}. A multivariate pseudo-likelihood approach to estimating ocean wave direction models. (Accepted by J. R. Stat. Soc. C in December 2021, preprint at www.lancs.ac.uk/$\sim$jonathan.) arXiv:2202.03773.
+2023: J. P. Grainger, A. Sykulski, K. Ewans, H. F. Hansen and \textbf{P. Jonathan}. A multivariate pseudo-likelihood approach to estimating ocean wave direction models. J. R. Stat. Soc. C https://doi.org/10.1093/jrsssc/qlad006 arXiv:2202.03773.
 
-2023: S. Tendijck, \textbf{P. Jonathan}, D. Randell and J. A. Tawn. Extremal characteristics of conditional models. (Submitted to Environmetrics in February 2021, preprint at www.lancs.ac.uk/$\sim$jonathan.) arXiv:2302.14501.
+2023: C. Roberts, R. Ijzermans, D. Randell, M.Jones, \textbf{P. Jonathan}, K. Mandel, B. Hirst and O. Shorttle. Avoiding methane emission rate underestimates when using the divergence method. (Submitted to Environ. Res. Lett. in April 2023, preprint at www.lancs.ac.uk/$\sim$jonathan). arXiv:2304.10303.
+
+2023: S. Tendijck, \textbf{P. Jonathan}, D. Randell and J. A. Tawn. Temporal evolution of the extreme excursions of multivariate kth order Markov processes with application to oceanographic data. (Submitted to Environmetrics in February 2023, preprint at www.lancs.ac.uk/$\sim$jonathan). arXiv:2302.14501.
 
 2023: S. Tendijck, J. A. Tawn and \textbf{P. Jonathan}. Extremal characteristics of conditional models. Extremes 26:139–156. arXiv:2202.11673.
 
