--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -417,15 +417,13 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 \setlength{\parskip}{0.5em}
 
-D. Dodd, E. Cripps, D. Leslie and \textbf{P. Jonathan} Bayesian adaptive sampling for pipeline spans.
+J. P. Grainger, A. Sykulski a \textbf{P. Jonathan}. Amcangyfrif sbectrwm amleddol tonnau disgyrchiol arwyneb y m\^or o amgylch arfordir Cymru.
 
-K. Ewans and \textbf{P. Jonathan} Is the 100-year return value for significant wave height increasing in the Tasman Sea?
+C. J. R. Murphy-Barltrop, E. Mackay and \textbf{P. Jonathan}. A novel inference framework for the SPAR model.
 
-J. P. Grainger, A. Sykulski a \textbf{P. Jonathan} Amcangyfrif sbectrwm amleddol tonnau disgyrchiol arwyneb y m\^or o amgylch arfordir Cymru.
+E. Ross, R. Towe, D. Randell and \textbf{P. Jonathan}. covXtreme: MATLAB software for non-stationary penalised piecewise constant marginal modelling, conditional extreme value modelling and environmental contour estimation.
 
-E. Ross, R. Towe, D. Randell and \textbf{P. Jonathan} PPC: MATLAB software for non-stationary penalised piecewise constant marginal and conditional extreme value modelling.
-
-S. Tendijck, J. A. Tawn, D. Randell and \textbf{P. Jonathan} Temporal evolution of extreme excursions of multivariate stationary kth order Markov processes with application to oceanographic data
+Y. Wu, J. A. Tawn and \textbf{P. Jonathan}. Characterising large-scale spatial extremal dependence of storm environments in the North Sea.
 
 \setlength{\parskip}{0em}
 
