CV a www heb Dan

--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -95,7 +95,7 @@ E. Y. Kamber, \textbf{P. Jonathan}, A. G. Brenton, and J. H. Beynon. Single-elec
 \section{Academic supervision}
 \cventry{2022--date}{T. Newman}{Ph.D., Department of Mathematics \& Statistics, Lancaster University, UK}{}{}{}
 \cventry{2022--date}{M. Speers}{Ph.D., Department of Mathematics \& Statistics, Lancaster University, UK}{}{}{}
-\cventry{2021--date}{D. Dodd}{Ph.D., Department of Mathematics \& Statistics, Lancaster University, UK}{}{}{}
+\cventry{2021--2022}{D. Dodd}{Department of Mathematics \& Statistics, Lancaster University, UK}{}{}{}
 \cventry{2019--2022}{J. Grainger}{Ph.D., Department of Mathematics \& Statistics, Lancaster University, UK}{}{}{}
 \cventry{2019--2022}{S. Tendijck}{Ph.D., Department of Mathematics \& Statistics, Lancaster University, UK}{}{}{}
 \cventry{2016--2020}{R. Shooter}{Ph.D., Department of Mathematics \& Statistics, Lancaster University, UK}{}{}{}
