Newyddiad cyn RSS

--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -140,7 +140,7 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 2023:  A.M. Barlow, E. Mackay, E. Eastoe and \textbf{P. Jonathan}. A penalised piecewise-linear model for non-stationary extreme value analysis of peaks over threshold. Ocean Eng. 267:113265. arXiv:2201.03915.
 
-2023: K. Ewans and \textbf{P. Jonathan} Is the 100-year return value for significant wave height increasing in the Tasman Sea? (Submitted to 42th Int. Conf. on Ocean, Offshore \& Arctic Engineering, Mebourne; preprint at  www.lancs.ac.uk/$\sim$jonathan.)
+2023: K. Ewans and \textbf{P. Jonathan} Is the 100-year return value for significant wave height increasing in the Tasman Sea? (Proc. 42th Int. Conf. on Ocean, Offshore \& Arctic Engineering, Mebourne; preprint at  www.lancs.ac.uk/$\sim$jonathan.)
 
 2023: K. Ewans and \textbf{P. Jonathan} Uncertainties in estimating the effect of climate change on 100-year return value for significant wave height. Ocean Eng. 272:113840. arXiv:2212.11049.
 
