Newyddu CV gyda covXtreme

--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -144,7 +144,7 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 2023: K. Ewans and \textbf{P. Jonathan} Uncertainties in estimating the effect of climate change on 100-year return value for significant wave height. Ocean Eng. 272:113840. arXiv:2212.11049.
 
-2023: J. P. Grainger, A. Sykulski, K. Ewans, H. F. Hansen and \textbf{P. Jonathan}. A multivariate pseudo-likelihood approach to estimating ocean wave direction models. J. R. Stat. Soc. C https://doi.org/10.1093/jrsssc/qlad006 arXiv:2202.03773.
+2023: J. P. Grainger, A. Sykulski, K. Ewans, H. F. Hansen and \textbf{P. Jonathan}. A multivariate pseudo-likelihood approach to estimating ocean wave direction models. J. R. Stat. Soc. C https://doi.org/10.1093/jrsssc/qlad006. arXiv:2202.03773.
 
 2023: C. Roberts, R. Ijzermans, D. Randell, M.Jones, \textbf{P. Jonathan}, K. Mandel, B. Hirst and O. Shorttle. Avoiding methane emission rate underestimates when using the divergence method. (Submitted to Environ. Res. Lett. in April 2023, preprint at www.lancs.ac.uk/$\sim$jonathan). arXiv:2304.10303.
 
@@ -152,7 +152,9 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 2023: S. Tendijck, J. A. Tawn and \textbf{P. Jonathan}. Extremal characteristics of conditional models. Extremes 26:139–156. arXiv:2202.11673.
 
-2023: R. Towe, D. Randell, J. Kensler, G. Feld and and \textbf{P. Jonathan}. Estimation of associated values from conditional extreme value models. Ocean Eng. 272:113808.
+2023: R. Towe, D. Randell, J. Kensler, G. Feld and \textbf{P. Jonathan}. Estimation of associated values from conditional extreme value models. Ocean Eng. 272:113808.
+
+2023: R. Towe, E. Ross, D. Randell and \textbf{P. Jonathan}. covXtreme : MATLAB software for non-stationary penalised piecewise constant marginal and conditional extreme value models. (Submitted to Environmental Modelling and Software in October 2023, preprint at www.lancs.ac.uk/$\sim$jonathan). arXiv:2309:17295.
 
 2022: A. Raby, G. Bullock, \textbf{P. Jonathan}, D. Randell and C. Whittaker. On wave impact pressure variability. Coastal Eng. 177:104168. doi:10.1016/j.coastaleng.2022.104168.
 
