--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -36,15 +36,17 @@
 
 Philip Jonathan is a statistical modeller, Chief Statistician at Shell and Chair of Environmental Statistics and Data Science in the Department of Mathematics and Statistics at Lancaster University, UK (both on a part-time basis from April 2023). His current research is reported at www.lancs.ac.uk/$\sim$jonathan. He has more than 30 years experience in statistical modelling of physical systems, particularly the ocean environment, and a background in applied mathematics and physics. He is particularly interested in characterising extreme ocean environments, and the development of methodology for good design and re-analysis of offshore and coastal infrastructure. He has published on the development of methods for large-scale non-stationary marginal extreme value modelling with multidimensional covariates, and non-stationary extensions of multivariate, spatial and time-series extreme value methods, and applied these widely. He has developed and refined estimators summarising the tails of distributions, including return values, associated values and environmental design contours in the presence of uncertainty. His long-standing interests include Bayesian uncertainty analysis for complex systems, Bayesian inference for optimal design and probabilistic inversion in remote sensing, multivariate prediction and computational statistics generally. He has also published on ion physics, chemical kinetics, multivariate analysis, chemometrics and quantitative structure--activity relationships, single pixel cameras, wave radar measurement, time-series and change-point analysis, and ancient writing systems. Illustrative references include:
 
-\setlength{\parskip}{0.3em}
+\setlength{\parskip}{0.2em}
 
 K. Ewans and \textbf{P. Jonathan} Uncertainties in estimating the effect of climate change on 100-year return value for significant wave height. Ocean Eng. 272:113840. arXiv:2212.11049, 2023.
 
-J. P. Grainger, A. Sykulski, K. Ewans, H. F. Hansen and \textbf{P. Jonathan}. A multivariate pseudo-likelihood approach to estimating ocean wave direction models. J. R. Stat. Soc. C https://doi.org/10.1093/jrsssc/qlad006. arXiv:2202.03773, 2023.
+J. P. Grainger, A. Sykulski, K. Ewans, H. F. Hansen and \textbf{P. Jonathan}. A multivariate pseudo-likelihood approach to estimating ocean wave direction models. J. R. Stat. Soc. C 118: 1373-1384, 2023.
 
-R. Shooter, E. Ross, A. Ribal, I.R. Young and \textbf{P. Jonathan}. Multivariate spatial conditional extremes for extreme ocean environments. Ocean Eng. 247:110647, 2022.
+S.Tendijck, E. Eastoe, J. Tawn, D. Randell and \textbf{P. Jonathan}. Modelling the extremes of bivariate mixture distributions with application to oceanographic data. J. Amer. Statist. Assoc. 118:1373--1384, 2023.
 
-B. Hirst, D. Randell, M. Jones, \textbf{P. Jonathan}, B. King and M. Dean. A new technique for monitoring the atmosphere above onshore carbon storage projects that can estimate the locations and mass emission rates of detected sources.  Energy Procedia 114:3716--3728, 2017.
+C. Roberts, O. Shorttle, K. Mandel, M. Jones, R. Ijzermans, B. Hirst and \textbf{P. Jonathan}. Enhanced monitoring of atmospheric methane from space with hierarchical Bayesian inference. Environ. Res. Lett. 17:064037, 2022. arXiv:2111.12486.
+
+R. Shooter, J. A. Tawn, E. Ross  and \textbf{P. Jonathan}. Basin-wide conditional spatial extremes for severe ocean storms. Extremes 24:241--265, 2021.
 
 E. Ross, M. Kereszturi, M. van Nee, D. Randell and \textbf{P. Jonathan}. On the spatial dependence of extreme ocean storm sea states. Ocean Eng. 145:1--14, 2017.
 
@@ -150,6 +152,8 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 2023: C. Roberts, R. Ijzermans, D. Randell, M.Jones, \textbf{P. Jonathan}, K. Mandel, B. Hirst and O. Shorttle. Avoiding methane emission rate underestimates when using the divergence method. (Accepted by Environ. Res. Lett. in October 2023, preprint at www.lancs.ac.uk/$\sim$jonathan). arXiv:2304.10303.
 
+2023: S.Tendijck, E. Eastoe, J. Tawn, D. Randell and \textbf{P. Jonathan}. Modelling the extremes of bivariate mixture distributions with application to oceanographic data. J. Amer. Statist. Assoc. 118:1373--1384.
+
 2023: S. Tendijck, \textbf{P. Jonathan}, D. Randell and J. A. Tawn. Temporal evolution of the extreme excursions of multivariate kth order Markov processes with application to oceanographic data. (Submitted to Environmetrics in February 2023, preprint at www.lancs.ac.uk/$\sim$jonathan). arXiv:2302.14501.
 
 2023: S. Tendijck, J. A. Tawn and \textbf{P. Jonathan}. Extremal characteristics of conditional models. Extremes 26:139–156. arXiv:2202.11673.
@@ -189,8 +193,6 @@ Publications are sorted first by year (in reverse), then by author and finally i
 2021: R. Shooter, E. Ross, A. Ribal, I.R. Young and \textbf{P. Jonathan}. Spatial dependence of extreme seas in the North East Atlantic from satellite altimeter measurements. Environmetrics 32:e2674.
 
 2021: R. Shooter, J. A. Tawn, E. Ross  and \textbf{P. Jonathan}. Basin-wide conditional spatial extremes for severe ocean storms. Extremes 24:241--265.
-
-2021: S.Tendijck, E. Eastoe, J. Tawn, D. Randell and \textbf{P. Jonathan}. Modelling the extremes of bivariate mixture distributions with application to oceanographic data. J. Amer. Statist. Assoc. 10.1080/01621459.2021.1996379.
 
 2021: R. Towe, E. Zanini, D. Randell, G. Feld and \textbf{P. Jonathan}. Efficient estimation of distributional properties of extreme seas from a hierarchical description applied to calculation of un-manning and other weather-related operational windows. Ocean Eng. 238:109642.
 
