--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -150,6 +150,8 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 2023: J. P. Grainger, A. Sykulski, K. Ewans, H. F. Hansen and \textbf{P. Jonathan}. A multivariate pseudo-likelihood approach to estimating ocean wave direction models. J. R. Stat. Soc. C https://doi.org/10.1093/jrsssc/qlad006. arXiv:2202.03773.
 
+2023: R. Paleja, O. Ekhorutomwen, M. Jones, John Ayoola, R. Pitchumani and \textbf{P. Jonathan}. Reducing the CO$_2$ footprint at an LNG asset with replicate trains using operational data-driven analysis. A case study on end flash vessels. (Submitted to Gas Science and Engineering in October 2023, preprint at www.lancs.ac.uk/$\sim$jonathan).
+
 2023: C. Roberts, R. Ijzermans, D. Randell, M.Jones, \textbf{P. Jonathan}, K. Mandel, B. Hirst and O. Shorttle. Avoiding methane emission rate underestimates when using the divergence method. (Accepted by Environ. Res. Lett. in October 2023, preprint at www.lancs.ac.uk/$\sim$jonathan). arXiv:2304.10303.
 
 2023: S.Tendijck, E. Eastoe, J. Tawn, D. Randell and \textbf{P. Jonathan}. Modelling the extremes of bivariate mixture distributions with application to oceanographic data. J. Amer. Statist. Assoc. 118:1373--1384.
