--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -150,13 +150,15 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 2023: J. P. Grainger, A. Sykulski, K. Ewans, H. F. Hansen and \textbf{P. Jonathan}. A multivariate pseudo-likelihood approach to estimating ocean wave direction models. J. R. Stat. Soc. C https://doi.org/10.1093/jrsssc/qlad006. arXiv:2202.03773.
 
+2023: E. Mackay and \textbf{P. Jonathan}. Modelling multivariate extremes through angular-radial decomposition of the density function. arXiv:2310.12711.
+
 2023: R. Paleja, O. Ekhorutomwen, M. Jones, John Ayoola, R. Pitchumani and \textbf{P. Jonathan}. Reducing the CO$_2$ footprint at an LNG asset with replicate trains using operational data-driven analysis. A case study on end flash vessels. (Submitted to Gas Science and Engineering in October 2023, preprint at www.lancs.ac.uk/$\sim$jonathan).
 
 2023: C. Roberts, R. Ijzermans, D. Randell, M.Jones, \textbf{P. Jonathan}, K. Mandel, B. Hirst and O. Shorttle. Avoiding methane emission rate underestimates when using the divergence method. (Accepted by Environ. Res. Lett. in October 2023, preprint at www.lancs.ac.uk/$\sim$jonathan). arXiv:2304.10303.
 
 2023: S.Tendijck, E. Eastoe, J. Tawn, D. Randell and \textbf{P. Jonathan}. Modelling the extremes of bivariate mixture distributions with application to oceanographic data. J. Amer. Statist. Assoc. 118:1373--1384.
 
-2023: S. Tendijck, \textbf{P. Jonathan}, D. Randell and J. A. Tawn. Temporal evolution of the extreme excursions of multivariate kth order Markov processes with application to oceanographic data. (Submitted to Environmetrics in February 2023, preprint at www.lancs.ac.uk/$\sim$jonathan). arXiv:2302.14501.
+2023: S. Tendijck, \textbf{P. Jonathan}, D. Randell and J. A. Tawn. Temporal evolution of the extreme excursions of multivariate kth order Markov processes with application to oceanographic data. (Accepted by Environmetrics, November 2023, preprint at www.lancs.ac.uk/$\sim$jonathan). arXiv:2302.14501.
 
 2023: S. Tendijck, J. A. Tawn and \textbf{P. Jonathan}. Extremal characteristics of conditional models. Extremes 26:139–156. arXiv:2202.11673.
 
@@ -428,8 +430,6 @@ Publications are sorted first by year (in reverse), then by author and finally i
 J. P. Grainger, A. Sykulski a \textbf{P. Jonathan}. Amcangyfrif sbectrwm amleddol tonnau disgyrchiol arwyneb y m\^or o amgylch arfordir Cymru.
 
 C. J. R. Murphy-Barltrop, E. Mackay and \textbf{P. Jonathan}. A novel inference framework for the SPAR model.
-
-E. Ross, R. Towe, D. Randell and \textbf{P. Jonathan}. covXtreme: MATLAB software for non-stationary penalised piecewise constant marginal modelling, conditional extreme value modelling and environmental contour estimation.
 
 Y. Wu, J. A. Tawn and \textbf{P. Jonathan}. Characterising large-scale spatial extremal dependence of storm environments in the North Sea.
 
