Newyddu dechrau'r flwyddyn; erthyglau SPAR

--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -109,7 +109,7 @@ E. Y. Kamber, \textbf{P. Jonathan}, A. G. Brenton, and J. H. Beynon. Single-elec
 \cventry{2012--2015}{B. Pickering}{Ph.D., Department of Mathematics \& Statistics, Lancaster University, UK}{}{}{}
 \cventry{2011--2012}{D. Reeve}{M.Res., Department of Mathematics \& Statistics, Lancaster University, UK}{}{}{}
 \cventry{2010--2015}{R. Towe}{Ph.D., Department of Mathematics \& Statistics, Lancaster University, UK}{}{}{}
-\cventry{2010--date}{Y. Wu}{Ph.D., Department of Mathematics \& Statistics, Lancaster University, UK}{}{}{}
+\cventry{2010--2023}{Y. Wu}{Ph.D., Department of Mathematics \& Statistics, Lancaster University, UK}{}{}{}
 \cventry{2009--2012}{J. Wadsworth}{Ph.D., Department of Mathematics \& Statistics, Lancaster University, UK}{}{}{}
 \cventry{2008--2011}{R. Killick}{Ph.D., Department of Mathematics \& Statistics, Lancaster University, UK}{}{}{}
 \cventry{2006--2010}{D. Randell}{Ph.D., School of Mathematical Sciences, Durham University, UK}{}{}{}
@@ -122,7 +122,7 @@ E. Y. Kamber, \textbf{P. Jonathan}, A. G. Brenton, and J. H. Beynon. Single-elec
 
 \cvitem{Recent talks and seminars}{Oceanographic extremes (Metoffice, Exeter, 2022; Wales Mathematics Colloquium, Gregynnog, 2022; Royal Statistical Society Conference, 2021; ISSC-ITTC, 2021; Waves SIG, 2020; OMAE Conference, 2020; Lancaster extremes workshop, 2019; Marine Centre Wales, Bangor, 2018; Extreme Value Analysis \& Natural Hazards, Southampton, 2017); Remote sensing (Wales Mathematics Colloquium, Gregynnog, 2022; Data-centric engineering, 2021); Emerging themes in data science (Emerging Applications Section, RSS, London, 2017); Spatial extremes (Extreme Value Analysis \& Natural Hazards, Southampton, 2017); Real-time data and applications (StatScale workshop, Lancaster, 2017).} 
 
-\cvitem{Academic leadership}{Member of: REF 2021 Mathematics Sub-panel (2018-21); Advisory Board for Mathematical Sciences (Durham, 2016-2017); StatScale External Advisory Board (Mathematics and Statistics, Lancaster, 2016-2018); STOR-i External Advisory Board (Mathematics and Statistics, Lancaster, 2009-2018).}
+\cvitem{Academic leadership}{Member of REF 2021 Mathematics Sub-panel (2018-21); Advisory Board for Mathematical Sciences (Durham, 2016-2017); StatScale External Advisory Board (Mathematics and Statistics, Lancaster, 2016-2018); STOR-i External Advisory Board (Mathematics and Statistics, Lancaster, 2009-2018).}
 
 \cvitem{External examination of PhDs}{Mathematical Sciences, (Durham, 2020); Department of Civil Engineering and Environmental Science (Imperial College, 2017); School of Chemical Engineering and Advanced Materials, Newcastle, 2016); Department of Mathematical Sciences (Norwegian University of Science and Technology, Trondheim, 2015); Institute for Transport Studies (Leeds, 2011); Centre for Process Analytics and Control Technology (Newcastle, 2003). Also acted as Internal Examiner for Lancaster PhDs since 2018 on numerous occasions.}
 
@@ -142,19 +142,23 @@ Publications are sorted first by year (in reverse), then by author and finally i
 \setlength{\parskip}{0.2em}
 \vspace{5pt}
 
+2024: E. B. L. Mackay, C. J. R. Murphy-Barltrop and \textbf{P. Jonathan}. The SPAR model: a new paradigm for multivariate extremes. Application to joint distributions of metocean variables. (Submitted to OMAE24 in January 2024, preprint at www.lancs.ac.uk/$\sim$jonathan).
+
+2024: C. J. R. Murphy-Barltrop, E. Mackay and \textbf{P. Jonathan}. Inference for multivariate extremes via a semi-parametric angular-radial model. (Submitted to Extremes in January 2024, preprint at www.lancs.ac.uk/$\sim$jonathan).
+
 2023:  A.M. Barlow, E. Mackay, E. Eastoe and \textbf{P. Jonathan}. A penalised piecewise-linear model for non-stationary extreme value analysis of peaks over threshold. Ocean Eng. 267:113265. arXiv:2201.03915.
 
 2023: K. Ewans and \textbf{P. Jonathan} Is the 100-year return value for significant wave height increasing in the Tasman Sea? (Proc. 42th Int. Conf. on Ocean, Offshore \& Arctic Engineering, Mebourne; preprint at  www.lancs.ac.uk/$\sim$jonathan.)
 
 2023: K. Ewans and \textbf{P. Jonathan} Uncertainties in estimating the effect of climate change on 100-year return value for significant wave height. Ocean Eng. 272:113840. arXiv:2212.11049.
 
-2023: J. P. Grainger, A. Sykulski, K. Ewans, H. F. Hansen and \textbf{P. Jonathan}. A multivariate pseudo-likelihood approach to estimating ocean wave direction models. J. R. Stat. Soc. C https://doi.org/10.1093/jrsssc/qlad006. arXiv:2202.03773.
+2023: J. P. Grainger, A. Sykulski, K. Ewans, H. F. Hansen and \textbf{P. Jonathan}. A multivariate pseudo-likelihood approach to estimating ocean wave direction models. J. R. Stat. Soc. C. 72:544-565.  arXiv:2202.03773.
 
 2023: E. Mackay and \textbf{P. Jonathan}. Modelling multivariate extremes through angular-radial decomposition of the density function. arXiv:2310.12711.
 
-2023: R. Paleja, O. Ekhorutomwen, M. Jones, John Ayoola, R. Pitchumani and \textbf{P. Jonathan}. Reducing the CO$_2$ footprint at an LNG asset with replicate trains using operational data-driven analysis. A case study on end flash vessels. (Submitted to Gas Science and Engineering in October 2023, preprint at www.lancs.ac.uk/$\sim$jonathan).
+2023: R. Paleja, O. Ekhorutomwen, M. Jones, John Ayoola, R. Pitchumani and \textbf{P. Jonathan}. Reducing the CO$_2$ footprint at an LNG asset with replicate trains using operational data-driven analysis. A case study on end flash vessels. (Submitted to Data-Centric Engineering in December 2023, preprint at www.lancs.ac.uk/$\sim$jonathan).
 
-2023: C. Roberts, R. Ijzermans, D. Randell, M.Jones, \textbf{P. Jonathan}, K. Mandel, B. Hirst and O. Shorttle. Avoiding methane emission rate underestimates when using the divergence method. (Accepted by Environ. Res. Lett. in October 2023, preprint at www.lancs.ac.uk/$\sim$jonathan). arXiv:2304.10303.
+2023: C. Roberts, R. Ijzermans, D. Randell, M.Jones, \textbf{P. Jonathan}, K. Mandel, B. Hirst and O. Shorttle. Avoiding methane emission rate underestimates when using the divergence method. Environ. Res. Lett. 18:114033. arXiv:2304.10303.
 
 2023: S.Tendijck, E. Eastoe, J. Tawn, D. Randell and \textbf{P. Jonathan}. Modelling the extremes of bivariate mixture distributions with application to oceanographic data. J. Amer. Statist. Assoc. 118:1373--1384.
 
@@ -166,7 +170,7 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 2023: R. Towe, E. Ross, D. Randell and \textbf{P. Jonathan}. covXtreme : MATLAB software for non-stationary penalised piecewise constant marginal and conditional extreme value models. (Submitted to Environmental Modelling and Software in October 2023, preprint at www.lancs.ac.uk/$\sim$jonathan). arXiv:2309:17295.
 
-2022: A. Raby, G. Bullock, \textbf{P. Jonathan}, D. Randell and C. Whittaker. On wave impact pressure variability. Coastal Eng. 177:104168. doi:10.1016/j.coastaleng.2022.104168.
+2022: A. Raby, G. Bullock, \textbf{P. Jonathan}, D. Randell and C. Whittaker. On wave impact pressure variability. Coastal Eng. 177:104168. 
 
 2022: C. Roberts, O. Shorttle, K. Mandel, M. Jones, R. Ijzermans, B. Hirst and \textbf{P. Jonathan}. Enhanced monitoring of atmospheric methane from space with hierarchical Bayesian inference. Environ. Res. Lett. 17:064037. arXiv:2111.12486.
 
@@ -174,9 +178,9 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 2022: R. Shooter, E. Ross, A. Ribal, I.R. Young and \textbf{P. Jonathan}. Multivariate spatial conditional extremes for extreme ocean environments. Ocean Eng. 247:110647. arXiv:2201.10451.
 
-2022: R. Wada, J. Rohmer, Y. Krien and \textbf{P. Jonathan}. Statistical estimation of spatial wave extremes for tropical cyclones from small data samples: validation of the STM-E approach using long-term synthetic cyclone data for the Caribbean Sea. Nat. Hazards Earth Sys., 22, 431-444. doi:10.5194/nhess-22-431-2022.
+2022: R. Wada, J. Rohmer, Y. Krien and \textbf{P. Jonathan}. Statistical estimation of spatial wave extremes for tropical cyclones from small data samples: validation of the STM-E approach using long-term synthetic cyclone data for the Caribbean Sea. Nat. Hazards Earth Sys., 22, 431-444. 
 
-2021: P. A. Carling, \textbf{P. Jonathan} and S. Teng. Fitting Limit Lines (envelope curves) to spreads of geoenvironmental data. Prog. Phys. Geog.: Earth \& Env., December 2021. doi:10.1177/03091333211059995.
+2021: P. A. Carling, \textbf{P. Jonathan} and S. Teng. Fitting Limit Lines (envelope curves) to spreads of geoenvironmental data. Prog. Phys. Geog.: Earth \& Env. 46:272-290.
 
 2021: J. P. Grainger, A. Sykulski, \textbf{P. Jonathan} and K. Ewans. Estimating the parameters of ocean wave spectra. Ocean Eng. 229:108934. arXiv:2008.10437.
 
