--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -144,7 +144,7 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 2024: E. B. L. Mackay, C. J. R. Murphy-Barltrop and \textbf{P. Jonathan}. The SPAR model: a new paradigm for multivariate extremes. Application to joint distributions of metocean variables. (Submitted to OMAE24 in January 2024, preprint at www.lancs.ac.uk/$\sim$jonathan).
 
-2024: C. J. R. Murphy-Barltrop, E. Mackay and \textbf{P. Jonathan}. Inference for multivariate extremes via a semi-parametric angular-radial model. (Submitted to Extremes in January 2024, preprint at www.lancs.ac.uk/$\sim$jonathan).
+2024: C. J. R. Murphy-Barltrop, E. Mackay and \textbf{P. Jonathan}. Inference for multivariate extremes via a semi-parametric angular-radial model. (Submitted to Extremes in January 2024, preprint at www.lancs.ac.uk/$\sim$jonathan).  arXiv:2401.07259.
 
 2023:  A.M. Barlow, E. Mackay, E. Eastoe and \textbf{P. Jonathan}. A penalised piecewise-linear model for non-stationary extreme value analysis of peaks over threshold. Ocean Eng. 267:113265. arXiv:2201.03915.
 
@@ -154,7 +154,7 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 2023: J. P. Grainger, A. Sykulski, K. Ewans, H. F. Hansen and \textbf{P. Jonathan}. A multivariate pseudo-likelihood approach to estimating ocean wave direction models. J. R. Stat. Soc. C. 72:544-565.  arXiv:2202.03773.
 
-2023: E. Mackay and \textbf{P. Jonathan}. Modelling multivariate extremes through angular-radial decomposition of the density function. arXiv:2310.12711.
+2023: E. Mackay and \textbf{P. Jonathan}. Modelling multivariate extremes through angular-radial decomposition of the density function. (Submitted to arXiv in December 2023, submitted to Extremes in February 2024) arXiv:2310.12711.
 
 2023: R. Paleja, O. Ekhorutomwen, M. Jones, John Ayoola, R. Pitchumani and \textbf{P. Jonathan}. Reducing the CO$_2$ footprint at an LNG asset with replicate trains using operational data-driven analysis. A case study on end flash vessels. (Submitted to Data-Centric Engineering in December 2023, preprint at www.lancs.ac.uk/$\sim$jonathan).
 
