Tacluso o achos covXtreme a chynganeddu

--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -148,6 +148,8 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 2024: K. Sando, R. Wada, J. Rohmer and \textbf{P. Jonathan}. Multivariate spatial and spatio-temporal models for extreme tropical cyclone seas. (Submitted to Ocean Engineering in March 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
 
+2024: R. Towe, E. Ross, D. Randell and \textbf{P. Jonathan}. covXtreme : MATLAB software for non-stationary penalised piecewise constant marginal and conditional extreme value models. (Accepted by Environmental Modelling and Software in April 2024, preprint at www.lancs.ac.uk/$\sim$jonathan). arXiv:2309:17295.
+
 2023:  A.M. Barlow, E. Mackay, E. Eastoe and \textbf{P. Jonathan}. A penalised piecewise-linear model for non-stationary extreme value analysis of peaks over threshold. Ocean Eng. 267:113265. arXiv:2201.03915.
 
 2023: K. Ewans and \textbf{P. Jonathan} Is the 100-year return value for significant wave height increasing in the Tasman Sea? (Proc. 42th Int. Conf. on Ocean, Offshore \& Arctic Engineering, Mebourne; preprint at  www.lancs.ac.uk/$\sim$jonathan.)
@@ -169,8 +171,6 @@ Publications are sorted first by year (in reverse), then by author and finally i
 2023: S. Tendijck, J. A. Tawn and \textbf{P. Jonathan}. Extremal characteristics of conditional models. Extremes 26:139–156. arXiv:2202.11673.
 
 2023: R. Towe, D. Randell, J. Kensler, G. Feld and \textbf{P. Jonathan}. Estimation of associated values from conditional extreme value models. Ocean Eng. 272:113808.
-
-2023: R. Towe, E. Ross, D. Randell and \textbf{P. Jonathan}. covXtreme : MATLAB software for non-stationary penalised piecewise constant marginal and conditional extreme value models. (Submitted to Environmental Modelling and Software in October 2023, preprint at www.lancs.ac.uk/$\sim$jonathan). arXiv:2309:17295.
 
 2022: A. Raby, G. Bullock, \textbf{P. Jonathan}, D. Randell and C. Whittaker. On wave impact pressure variability. Coastal Eng. 177:104168. 
 
