Erthygl Matt; CV

--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -148,6 +148,8 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 2024: K. Sando, R. Wada, J. Rohmer and \textbf{P. Jonathan}. Multivariate spatial and spatio-temporal models for extreme tropical cyclone seas. (Submitted to Ocean Engineering in March 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
 
+2024: M. Speers, D. Randell, J. A. Tawn and \textbf{P. Jonathan}. Estimating metocean environments associated with extreme structural response. (Submitted to Ocean Engineering in April 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
+
 2024: R. Towe, E. Ross, D. Randell and \textbf{P. Jonathan}. covXtreme : MATLAB software for non-stationary penalised piecewise constant marginal and conditional extreme value models. Environ. Model. Softw. 177:106035. arXiv:2309:17295.
 
 2024: E. J. Watts, R. Rees, T. M. Gernon, \textbf{P. Jonathan}, D. Keir, R. N. Taylor, M. Siegburg, E. L. Chambers, C. Pagli, M. J. Cooper, A. Michalik, J. A. Milton and T. K Hincks. Afar triple junction fed by single, asymmetric mantle upwelling. (Submitted to Nature in April 2024).
