--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -146,7 +146,7 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 2024: C. J. R. Murphy-Barltrop, E. Mackay and \textbf{P. Jonathan}. Inference for multivariate extremes via a semi-parametric angular-radial model. (Submitted to Extremes in January 2024, preprint at www.lancs.ac.uk/$\sim$jonathan).  arXiv:2401.07259.
 
-2024: K. Sando, R. Wada, J. Rohmer and \textbf{P. Jonathan}. Multivariate spatial and spatio-temporal models for extreme tropical cyclone seas. (Submitted to Ocean Engineering in March 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
+2024: K. Sando, R. Wada, J. Rohmer and \textbf{P. Jonathan}. Multivariate spatial and spatio-temporal models for extreme tropical cyclone seas. (Accepted by Ocean Engineering in June 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
 
 2024: M. Speers, D. Randell, J. A. Tawn and \textbf{P. Jonathan}. Estimating metocean environments associated with extreme structural response. (Submitted to Ocean Engineering in April 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
 
