--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -146,13 +146,17 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 2024: C. J. R. Murphy-Barltrop, E. Mackay and \textbf{P. Jonathan}. Inference for multivariate extremes via a semi-parametric angular-radial model. (Submitted to Extremes in January 2024, preprint at www.lancs.ac.uk/$\sim$jonathan).  arXiv:2401.07259.
 
+2024: R. Paleja, O. Ekhorutomwen, M. Jones, John Ayoola, R. Pitchumani and \textbf{P. Jonathan}. Reducing the CO$_2$ footprint at an LNG asset with replicate trains using operational data-driven analysis. A case study on end flash vessels. (Accepted by Data-Centric Engineering in June 2024, preprint at www.lancs.ac.uk/$\sim$jonathan).
+
 2024: K. Sando, R. Wada, J. Rohmer and \textbf{P. Jonathan}. Multivariate spatial and spatio-temporal models for extreme tropical cyclone seas. (Accepted by Ocean Engineering in June 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
 
 2024: M. Speers, D. Randell, J. A. Tawn and \textbf{P. Jonathan}. Estimating metocean environments associated with extreme structural response. (Submitted to Ocean Engineering in April 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
 
+2024: S. Tendijck, D. Randell, G. Feld and \textbf{P. Jonathan}. Uncertainties in return values from non-stationary extreme value analysis of peaks over threshold using the generalised Pareto distribution. (Submitted to Ocean Engineering in June 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
+
 2024: R. Towe, E. Ross, D. Randell and \textbf{P. Jonathan}. covXtreme : MATLAB software for non-stationary penalised piecewise constant marginal and conditional extreme value models. Environ. Model. Softw. 177:106035. arXiv:2309:17295.
 
-2024: E. J. Watts, R. Rees, T. M. Gernon, \textbf{P. Jonathan}, D. Keir, R. N. Taylor, M. Siegburg, E. L. Chambers, C. Pagli, M. J. Cooper, A. Michalik, J. A. Milton and T. K Hincks. Afar triple junction fed by single, asymmetric mantle upwelling. (Submitted to Nature in April 2024).
+2024: E. J. Watts, R. Rees, T. M. Gernon, \textbf{P. Jonathan}, D. Keir, R. N. Taylor, M. Siegburg, E. L. Chambers, C. Pagli, M. J. Cooper, A. Michalik, J. A. Milton and T. K Hincks. Afar triple junction fed by single, asymmetric mantle upwelling. (Submitted to Nature Geoscience in April 2024).
 
 2023:  A.M. Barlow, E. Mackay, E. Eastoe and \textbf{P. Jonathan}. A penalised piecewise-linear model for non-stationary extreme value analysis of peaks over threshold. Ocean Eng. 267:113265. arXiv:2201.03915.
 
@@ -163,8 +167,6 @@ Publications are sorted first by year (in reverse), then by author and finally i
 2023: J. P. Grainger, A. Sykulski, K. Ewans, H. F. Hansen and \textbf{P. Jonathan}. A multivariate pseudo-likelihood approach to estimating ocean wave direction models. J. R. Stat. Soc. C. 72:544-565.  arXiv:2202.03773.
 
 2023: E. Mackay and \textbf{P. Jonathan}. Modelling multivariate extremes through angular-radial decomposition of the density function. (Submitted to arXiv in December 2023, submitted to Extremes in February 2024) arXiv:2310.12711.
-
-2023: R. Paleja, O. Ekhorutomwen, M. Jones, John Ayoola, R. Pitchumani and \textbf{P. Jonathan}. Reducing the CO$_2$ footprint at an LNG asset with replicate trains using operational data-driven analysis. A case study on end flash vessels. (Submitted to Data-Centric Engineering in December 2023, preprint at www.lancs.ac.uk/$\sim$jonathan).
 
 2023: C. Roberts, R. Ijzermans, D. Randell, M.Jones, \textbf{P. Jonathan}, K. Mandel, B. Hirst and O. Shorttle. Avoiding methane emission rate underestimates when using the divergence method. Environ. Res. Lett. 18:114033. arXiv:2304.10303.
 
