Uncert paper again

--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -152,7 +152,7 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 2024: M. Speers, D. Randell, J. A. Tawn and \textbf{P. Jonathan}. Estimating metocean environments associated with extreme structural response. (Submitted to Ocean Engineering in April 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
 
-2024: S. Tendijck, D. Randell, G. Feld and \textbf{P. Jonathan}. Uncertainties in return values from non-stationary extreme value analysis of peaks over threshold using the generalised Pareto distribution. (Submitted to Ocean Engineering in June 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
+2024: S. Tendijck, D. Randell, G. Feld and \textbf{P. Jonathan}. Practical non-stationary extreme value analysis of peaks over threshold using the generalised Pareto distribution: estimating uncertainties in return values. (Submitted to Ocean Eng. in June 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
 
 2024: R. Towe, E. Ross, D. Randell and \textbf{P. Jonathan}. covXtreme : MATLAB software for non-stationary penalised piecewise constant marginal and conditional extreme value models. Environ. Model. Softw. 177:106035. arXiv:2309:17295.
 
