--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -148,7 +148,7 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 2024: R. Paleja, O. Ekhorutomwen, M. Jones, John Ayoola, R. Pitchumani and \textbf{P. Jonathan}. Reducing the CO$_2$ footprint at an LNG asset with replicate trains using operational data-driven analysis. A case study on end flash vessels. (Accepted by Data-Centric Engineering in June 2024, preprint at www.lancs.ac.uk/$\sim$jonathan).
 
-2024: K. Sando, R. Wada, J. Rohmer and \textbf{P. Jonathan}. Multivariate spatial and spatio-temporal models for extreme tropical cyclone seas. (Accepted by Ocean Engineering in June 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
+2024: K. Sando, R. Wada, J. Rohmer and \textbf{P. Jonathan}. Multivariate spatial and spatio-temporal models for extreme tropical cyclone seas. Ocean Eng. 309:118365. 
 
 2024: M. Speers, D. Randell, J. A. Tawn and \textbf{P. Jonathan}. Estimating metocean environments associated with extreme structural response. (Submitted to Ocean Engineering in April 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
 
