Newyddu CV, papur Matt

--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -142,7 +142,7 @@ Publications are sorted first by year (in reverse), then by author and finally i
 \setlength{\parskip}{0.2em}
 \vspace{5pt}
 
-2024: E. B. L. Mackay, C. J. R. Murphy-Barltrop and \textbf{P. Jonathan}. The SPAR model: a new paradigm for multivariate extremes. Application to joint distributions of metocean variables. (Submitted to OMAE24 in January 2024, preprint at www.lancs.ac.uk/$\sim$jonathan).
+2024: E. B. L. Mackay, C. J. R. Murphy-Barltrop and \textbf{P. Jonathan}. The SPAR model: a new paradigm for multivariate extremes. Application to joint distributions of metocean variables. (Accepted by the Journal of Offshore Mechanics and Artic Engineering in June 2024, preprint at www.lancs.ac.uk/$\sim$jonathan).
 
 2024: C. J. R. Murphy-Barltrop, E. Mackay and \textbf{P. Jonathan}. Inference for multivariate extremes via a semi-parametric angular-radial model. (Submitted to Extremes in January 2024, preprint at www.lancs.ac.uk/$\sim$jonathan).  arXiv:2401.07259.
 
@@ -150,7 +150,7 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 2024: K. Sando, R. Wada, J. Rohmer and \textbf{P. Jonathan}. Multivariate spatial and spatio-temporal models for extreme tropical cyclone seas. Ocean Eng. 309:118365. 
 
-2024: M. Speers, D. Randell, J. A. Tawn and \textbf{P. Jonathan}. Estimating metocean environments associated with extreme structural response. (Submitted to Ocean Engineering in April 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
+2024: M. Speers, D. Randell, J. A. Tawn and \textbf{P. Jonathan}. Estimating metocean environments associated with extreme structural response to demonstrate the dangers of environmental contour methods. (Submitted to Ocean Engineering in April 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
 
 2024: S. Tendijck, D. Randell, G. Feld and \textbf{P. Jonathan}. Practical non-stationary extreme value analysis of peaks over threshold using the generalised Pareto distribution: estimating uncertainties in return values. (Submitted to Ocean Eng. in June 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
 
