Derbyniad papur Matt

--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -150,7 +150,7 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 2024: K. Sando, R. Wada, J. Rohmer and \textbf{P. Jonathan}. Multivariate spatial and spatio-temporal models for extreme tropical cyclone seas. Ocean Eng. 309:118365. 
 
-2024: M. Speers, D. Randell, J. A. Tawn and \textbf{P. Jonathan}. Estimating metocean environments associated with extreme structural response to demonstrate the dangers of environmental contour methods. (Submitted to Ocean Engineering in April 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
+2024: M. Speers, D. Randell, J. A. Tawn and \textbf{P. Jonathan}. Estimating metocean environments associated with extreme structural response to demonstrate the dangers of environmental contour methods. (Accepted by Ocean Engineering in July 2024, preprint at www.lancs.ac.uk/$\sim$jonathan. arXiv:2404.16775)
 
 2024: S. Tendijck, D. Randell, G. Feld and \textbf{P. Jonathan}. Practical non-stationary extreme value analysis of peaks over threshold using the generalised Pareto distribution: estimating uncertainties in return values. (Submitted to Ocean Eng. in June 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
 
