--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -70,7 +70,7 @@ E. Y. Kamber, \textbf{P. Jonathan}, A. G. Brenton, and J. H. Beynon. Single-elec
 
 \section{Employment}
 \cventry{2018--date}{Chair, Environmental Statistics and Data Science}{Lancaster University}{Lancaster, UK}{}{}
-\cventry{2018--date}{Chief Statistician}{Shell Projects \& Technology}{London, UK}{}{}
+\cventry{2018--2025}{Chief Statistician}{Shell Projects \& Technology}{London, UK}{}{}
 \cventry{2004--2018}{Head, Statistics \& Data Science}{Shell Projects \& Technology}{London, UK}{}{}
 \cventry{1996--2004}{Statistician}{Shell Thornton}{Chester, UK}{}{}
 \cventry{1993--1996}{Mathematician}{Shell Research}{Rijswijk, NL}{}{}
@@ -142,7 +142,7 @@ Publications are sorted first by year (in reverse), then by author and finally i
 \setlength{\parskip}{0.2em}
 \vspace{5pt}
 
-2024: E. B. L. Mackay, C. J. R. Murphy-Barltrop and \textbf{P. Jonathan}. The SPAR model: a new paradigm for multivariate extremes. Application to joint distributions of metocean variables. (Accepted by the Journal of Offshore Mechanics and Artic Engineering in June 2024, preprint at www.lancs.ac.uk/$\sim$jonathan).
+2024: E. B. L. Mackay, C. J. R. Murphy-Barltrop and \textbf{P. Jonathan}. The SPAR model: a new paradigm for multivariate extremes. Application to joint distributions of metocean variables. J. Offshore Mech. Arct. Eng. 147:011205.
 
 2024: C. J. R. Murphy-Barltrop, E. Mackay and \textbf{P. Jonathan}. Inference for multivariate extremes via a semi-parametric angular-radial model. (Submitted to Extremes in January 2024, preprint at www.lancs.ac.uk/$\sim$jonathan).  arXiv:2401.07259.
 
@@ -150,7 +150,7 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 2024: K. Sando, R. Wada, J. Rohmer and \textbf{P. Jonathan}. Multivariate spatial and spatio-temporal models for extreme tropical cyclone seas. Ocean Eng. 309:118365. 
 
-2024: M. Speers, D. Randell, J. A. Tawn and \textbf{P. Jonathan}. Estimating metocean environments associated with extreme structural response to demonstrate the dangers of environmental contour methods. (Accepted by Ocean Engineering in July 2024, preprint at www.lancs.ac.uk/$\sim$jonathan. arXiv:2404.16775)
+2024: M. Speers, D. Randell, J. A. Tawn and \textbf{P. Jonathan}. Estimating metocean environments associated with extreme structural response to demonstrate the dangers of environmental contour methods. Ocean Eng. 311:118754. arXiv:2404.16775.
 
 2024: S. Tendijck, D. Randell, G. Feld and \textbf{P. Jonathan}. Practical non-stationary extreme value analysis of peaks over threshold using the generalised Pareto distribution: estimating uncertainties in return values. (Submitted to Ocean Eng. in June 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
 
