--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -144,7 +144,9 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 2024: E. B. L. Mackay, C. J. R. Murphy-Barltrop and \textbf{P. Jonathan}. The SPAR model: a new paradigm for multivariate extremes. Application to joint distributions of metocean variables. J. Offshore Mech. Arct. Eng. 147:011205.
 
-2024: C. J. R. Murphy-Barltrop, E. Mackay and \textbf{P. Jonathan}. Inference for multivariate extremes via a semi-parametric angular-radial model. (Submitted to Extremes in January 2024, preprint at www.lancs.ac.uk/$\sim$jonathan).  arXiv:2401.07259.
+2024: C. J. R. Murphy-Barltrop, E. Mackay and \textbf{P. Jonathan}. Inference for multivariate extremes via a semi-parametric angular-radial model. (Accepted by Extremes in August 2024, preprint at www.lancs.ac.uk/$\sim$jonathan).  arXiv:2401.07259.
+
+2024: T. Newman, C. Nemeth, M. J. Jones and \textbf{P. Jonathan}. Probabilistic Inversion Modeling of Gas Emissions: A Gradient-Based MCMC Estimation of Gaussian Plume Parameters. (Submitted to Journal of the Americal Statistical Society in August 2024, preprint at www.lancs.ac.uk/$\sim$jonathan). arXiv:2408.01298.
 
 2024: R. Paleja, O. Ekhorutomwen, M. Jones, John Ayoola, R. Pitchumani and \textbf{P. Jonathan}. Reducing the CO$_2$ footprint at an LNG asset with replicate trains using operational data-driven analysis. A case study on end flash vessels. (Accepted by Data-Centric Engineering in June 2024, preprint at www.lancs.ac.uk/$\sim$jonathan).
 
