Thomas AOAS version

--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -148,7 +148,7 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 2024: C. J. R. Murphy-Barltrop, E. Mackay and \textbf{P. Jonathan}. Inference for multivariate extremes via a semi-parametric angular-radial model. (Accepted by Extremes in August 2024, preprint at www.lancs.ac.uk/$\sim$jonathan).  arXiv:2401.07259.
 
-2024: T. Newman, C. Nemeth, M. J. Jones and \textbf{P. Jonathan}. Probabilistic Inversion Modeling of Gas Emissions: A Gradient-Based MCMC Estimation of Gaussian Plume Parameters. (Submitted to Journal of the Americal Statistical Society in August 2024, preprint at www.lancs.ac.uk/$\sim$jonathan). arXiv:2408.01298.
+2024: T. Newman, C. Nemeth, M. J. Jones and \textbf{P. Jonathan}. Probabilistic Inversion Modeling of Gas Emissions: A Gradient-Based MCMC Estimation of Gaussian Plume Parameters. (Submitted to the Annals of Applied Statistics in October 2024, preprint at www.lancs.ac.uk/$\sim$jonathan). arXiv:2408.01298.
 
 2024: R. Paleja, O. Ekhorutomwen, M. Jones, John Ayoola, R. Pitchumani and \textbf{P. Jonathan}. Reducing the CO$_2$ footprint at an LNG asset with replicate trains using operational data-driven analysis. A case study on end flash vessels. (Accepted by Data-Centric Engineering in June 2024, preprint at www.lancs.ac.uk/$\sim$jonathan).
 
